<resources>
    <string name="app_name">Heureux</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="call_agent">Call Agent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_image">User image</string>
    <string name="user_name">User Name</string>
    <string name="email">User Email</string>
    <string name="user_phone_number">User Phone Number</string>
    <string name="view_my_purchases">My properties</string>
    <string name="read_terms_and_conditions">Terms and conditions</string>
    <string name="report_issue">Report issue</string>
    <string name="settings">Settings</string>
    <string name="go_to_settings_to_upload_your_profile_picture_your_information_will_be_used_to_improve_your_experience_in_this_app_and_for_the_purposes_described_in_our_policies_make_sure_to_read_our_terms_and_conditions">To set your profile, go to Settings->Profile. Your information will be used to improve your experience in this app, and for the purposes described in our policies. Make sure to read our terms and conditions.</string>
    <string name="image_of_company_logo">Image of company logo</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="set_your_profile">Set your profile</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="type_here">Type here</string>
    <string name="describe_what_s_happening">Describe what\'s happening:</string>
    <string name="property_on_rental_payment">Property on Rental Payment:</string>
    <string name="property_on_hire_purchase">Property on Hire Purchase:</string>
    <string name="property_on_full_payment">Property on full payment:</string>
    <string name="you_have_not_yet_purchased_or_rented_any_of_our_properties_go_to_the_home_screen_to_purchase_a_product">You have not yet purchased or rented any of our properties. Go to the home-screen to purchase a product.</string>
    <string name="property_image">Property image</string>
    <string name="property_name">Property Name</string>
    <string name="sign_out">Sign out</string>
    <string name="no_gmail">Gmail app not found. Please call our agent to address your issue.</string>
    <string name="call_denied">Call Permission Denied.</string>
    <string name="call_permission_head">Call Permission</string>
    <string name="permission_request">This permission is used to make a call to our agent at your preferred time; without it, you will not be able to communicate to our agent through phone call; please allow the permission to proceed.</string>
    <string name="fill_in_your_details">Fill in your details:</string>
    <string name="first_name_and_last_name">First name and last name</string>
    <string name="national_id_number">National ID number</string>
    <string name="phone_number">Phone number</string>
    <string name="residence">Residence</string>
    <string name="select_image">Select image</string>
    <string name="you_are_required_to_select_a_clear_image_of_your_face">You are required to select a clear image of your face.</string>
    <string name="your_information_will_be_used_as_described_in_our_terms_and_conditions">Your information will be used as described in our terms and conditions.</string>
    <string name="about_us">About Us</string>
    <string name="make_payment">Make payment</string>
    <string name="details">Details</string>
    <string name="set_payment">Set Payment</string>
    <string name="my_properties">My Properties</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="title_activity_biometric_lock">BiometricLockActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="buy_or_sell_your_land_or_plot_with_heureux_properties">Buy or sell your Land or Plot with Heureux Properties.</string>
    <string name="our_prices_are_not_exaggerated_and_locations_depend_on_where_you_want_ready_for_sale">Our prices are not exaggerated and locations depend on where you want ,ready for sale.</string>
    <string name="who_we_are">Who we are</string>
    <string name="we_are_a_real_estate_company_that_assists_in_the_acquisition_of_good_quality_and_well_priced_land_property">We are a Real Estate Company that assists in the acquisition of good quality and well priced land/property.</string>
    <string name="why_we_are_unique">Why we are unique?</string>
    <string name="we_have_a_track_record_of_pleasing_our_clients_by_providing_land_property_that_suites_their_needs_wants_and_at_good_and_favourable_prices_incomparable_to_the_current_market">We have a track record of pleasing our clients by providing land/property that suites their needs,wants and at good and favourable prices incomparable to the current market.</string>
    <string name="we_are_focused_on_you">We are focused on you!</string>
    <string name="our_prices_are_not_exaggerated_and_locations_depend_on_where_you_want_ready_for_">Our prices are not exaggerated and locations depend on where you want , ready for sale.</string>
    <string name="our_goal">Our Goal</string>
    <string name="in_the_current_real_estate_market_it_s_hard_to_find_a_company_that_focuses_on_their_clients_needs_we_are_able_to_make_our_clients_happy_by_giving_a_property_that_suites_their_needs_and_wants_at_good_and_favourable_prices_that_are_not_compared_to_the_current_market">In the current real estate market it’s hard to find a company that focuses on their clients needs, We are able to make our clients happy by giving a property that suites their needs and wants at good and favourable prices that are not compared to the current market.</string>
    <string name="jetro_chambers_westlands_4th_floor">Jetro Chambers Westlands 4th Floor</string>
    <string name="_254704606003">+254704606003</string>
    <string name="info_heureuxproperties_co_ke">info@heureuxproperties.co.ke</string>
    <string name="www_heureuxproperties_co_ke">www.heureuxproperties.co.ke</string>
    <string name="icon_location">Icon location</string>
    <string name="icon_phone">Icon phone</string>
    <string name="icon_email">Icon email</string>
    <string name="icon_web_address">Icon web address</string>
    <string name="message">Message</string>
    <string name="home_property_short_description">Home property short description.\n xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="home_property_long_description">Home property short description.\n xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="property_tag">property tag</string>
    <string name="buy_or_rent">buy or rent</string>
    <string name="price_tag_ksh">Price tag (Ksh.)</string>
    <string name="paymet_setup_instructions">In this section, You will set your payment method, as for the property that you are about to purchase or rent. After the setup, you will click the confirm button to save your payment setup. The agent will call you within 2 hours during our working hours to confirm with you the property you want to buy or rent. You will also be provided with the necessary documents after the call. You will also be requested to inspect the property before signing the documents and starting your payments.</string>
    <string name="your_profile_has_been_saved_successfully">Your profile has been saved successfully.</string>
    <string name="title_activity_account_details">AccountDetailsActivity</string>
    <string name="properties">Properties</string>
    <string name="whatsapp">WhatsApp</string>
</resources>