<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/app_options_menu"
        >
    <item
        android:id="@+id/option_call_agent"
        android:title="@string/call_agent"
        android:icon="@drawable/ic_outline_call_24"/>
    <item
        android:id="@+id/option_whatsapp"
        android:title="@string/whatsapp" />
    <item
        android:id="@+id/option_about_us"
        android:title="@string/about_us"
        android:icon="@drawable/ic_outline_info_24"/>
    <item
        android:id="@+id/option_make_payment"
        android:title="@string/make_payment"
        android:icon="@drawable/ic_outline_payments_24"/>
    <item
        android:id="@+id/option_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_outline_settings_24"/>
    </group>
</menu>