<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.account.AccountFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_of_company_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_light"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/user_photo_display_acc"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/user_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/set_profile_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_your_profile"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/user_photo_display_acc"
            app:layout_constraintEnd_toEndOf="@+id/make_pay_btn"
            app:layout_constraintStart_toStartOf="@+id/make_pay_btn"
            app:layout_constraintTop_toTopOf="@id/user_photo_display_acc" />

        <TextView
            android:id="@+id/user_name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/user_name"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/user_email_display"
            app:layout_constraintStart_toEndOf="@id/user_photo_display_acc"
            app:layout_constraintTop_toTopOf="@id/user_photo_display_acc" />

        <TextView
            android:id="@+id/user_email_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/user_phone_display"
            app:layout_constraintStart_toEndOf="@id/user_photo_display_acc"
            app:layout_constraintTop_toBottomOf="@+id/user_name_display" />

        <TextView
            android:id="@+id/user_phone_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_phone_number"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/user_photo_display_acc"
            app:layout_constraintStart_toEndOf="@id/user_photo_display_acc"
            app:layout_constraintTop_toBottomOf="@+id/user_email_display" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_photo_display_acc" />

        <Button
            android:id="@+id/purchases_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:text="@string/view_my_purchases"
            app:icon="@drawable/ic_outline_shopping_basket_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_pay_btn" />

        <Button
            android:id="@+id/ts_and_cs_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/read_terms_and_conditions"
            app:icon="@drawable/ic_outline_policy_24"
            app:layout_constraintEnd_toEndOf="@+id/purchases_btn"
            app:layout_constraintStart_toStartOf="@+id/purchases_btn"
            app:layout_constraintTop_toBottomOf="@+id/purchases_btn" />

        <Button
            android:id="@+id/report_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/report_issue"
            app:icon="@drawable/ic_outline_help_outline_24"
            app:layout_constraintEnd_toEndOf="@+id/ts_and_cs_btn"
            app:layout_constraintStart_toStartOf="@+id/ts_and_cs_btn"
            app:layout_constraintTop_toBottomOf="@+id/ts_and_cs_btn" />

        <Button
            android:id="@+id/settings_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/settings"
            app:icon="@drawable/ic_outline_settings_24"
            app:layout_constraintEnd_toEndOf="@+id/report_btn"
            app:layout_constraintStart_toStartOf="@+id/report_btn"
            app:layout_constraintTop_toBottomOf="@+id/report_btn" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="100dp"
            android:text="@string/go_to_settings_to_upload_your_profile_picture_your_information_will_be_used_to_improve_your_experience_in_this_app_and_for_the_purposes_described_in_our_policies_make_sure_to_read_our_terms_and_conditions"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_btn" />

        <Button
            android:id="@+id/make_pay_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/make_payment"
            app:icon="@drawable/ic_outline_payments_24"
            app:layout_constraintEnd_toEndOf="@+id/purchases_btn"
            app:layout_constraintStart_toStartOf="@+id/purchases_btn"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

